# searchgoat

./: README.md  pyproject.toml
src/searchgoat/: __init__.py  auth.py  client.py  config.py  exceptions.py  job.py  pagination.py
src/searchgoat/_utils/: dataframe.py
tests/: conftest.py  test_auth.py  test_config.py  test_dataframe.py  test_exceptions.py  test_job.py  test_pagination.py
