[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searchgoat"
version = "0.5.0"
description = "Query Cribl Search, get DataFrames."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "JR", email = "jr@ross.moda" }
]
keywords = ["cribl", "search", "dataframe", "pandas", "observability", "logs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/hackish-pub/searchgoat"
Documentation = "https://github.com/hackish-pub/searchgoat#readme"
Repository = "https://github.com/hackish-pub/searchgoat"
Issues = "https://github.com/hackish-pub/searchgoat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/searchgoat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
